--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "9.0.0-alpha.8",
+    "@types/three": "^0.171.0",
     "firebase": "^11.1.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.172.0",
+    "three-globe": "^2.39.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
