--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/fiber": "9.0.0-alpha.8",
     "@types/three": "^0.171.0",
     "firebase": "^11.1.0",
+    "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2",
     "three": "^0.172.0",
     "three-globe": "^2.39.1"
   },
