--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-swipeable": "^7.0.2",
     "three": "^0.172.0",
     "three-globe": "^2.39.1"
