--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
     "deploy": "next build && next export && firebase deploy"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.5",
+    "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "9.0.0-alpha.8",
     "@types/three": "^0.171.0",
     "firebase": "^11.1.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "globby": "^14.1.0",
     "next": "15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-particles": "^2.12.2",
+    "react-split-flap-effect": "^1.0.0",
     "react-swipeable": "^7.0.2",
     "sharp": "^0.34.1",
     "three": "^0.172.0",
-    "three-globe": "^2.39.1"
+    "three-globe": "^2.39.1",
+    "tsparticles-slim": "^2.12.0",
+    "vivus": "^0.4.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
+    "@types/vivus": "^0.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "typescript": "^5.8.2"
