--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && firebase deploy"
+    "deploy": "next build && pnpm dlx firebase-tools deploy --only hosting"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
@@ -37,6 +37,7 @@
     "@types/vivus": "^0.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.8.2"
   }
 }
