--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "deploy": "next build && pnpm dlx firebase-tools deploy --only hosting"
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "9.0.0-alpha.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@types/three": "^0.171.0",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.2",
